add get offer /:id
